force-app/main/default/objects/Account/fields/DeployTest__c.field-meta.xml
<CustomField>
    <fullName>DeployTest__c</fullName>
    <label>DeployTest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>