force-app/main/default/objects/Account/fields/number__c.field-meta.xml
<CustomField>
    <fullName>number__c</fullName>
    <label>number</label>
    <precision>17</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>