force-app/main/default/objects/Account/fields/TestDateField__c.field-meta.xml
<CustomField>
    <fullName>TestDateField__c</fullName>
    <label>TestDateField</label>
    <type>Date</type>
</CustomField>