force-app/main/default/objects/Account/fields/TestString1__c.field-meta.xml
<CustomField>
    <fullName>TestString1__c</fullName>
    <label>TestString1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>