force-app/main/default/objects/Account/fields/TestString2__c.field-meta.xml
<CustomField>
    <fullName>TestString2__c</fullName>
    <label>TestString2</label>
    <length>122</length>
    <type>Text</type>
</CustomField>