force-app/main/default/objects/Account/validationRules/AccountValidRule.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountValidRule</fullName>
    <active>true</active>
    <errorConditionFormula>Website = &apos;nosite&apos; &amp;&amp;  BillingCity = &apos;mittomen&apos;</errorConditionFormula>
    <errorMessage>error</errorMessage>
</ValidationRule>